--- a/style.css
+++ b/style.css
@@ -17,6 +17,31 @@ body {
 }
 
 /* || typography */
+h1, h2, h3 {
+  font-family: 'Sonsie One', cursive;
+  color: #707070;
+}
+
+header h1 {
+  /* font-family: 'Sonsie One', cursive; */
+  color: #FFF;
+  text-align: center;
+  font-size: 4rem;
+  text-shadow: 2px 2px 10px black;
+}
+
+h1 {
+  font-size: 3rem;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 2.0rem;
+}
 
 font[size="7"], font[size="6"], font[size="5"] {
   font-family: 'Sonsie One', cursive;
@@ -28,7 +53,7 @@ p, input, li, table, label {
   color: #2a2a2a;
 }
 
-font[size="7"] {
+/* font[size="7"] {
   font-size: 4rem;
   text-align: center;
   color: white;
@@ -42,7 +67,7 @@ font[size="6"] {
 
 font[size="5"] {
   font-size: 2.2rem;
-}
+} */
 
 p, li, table {
   font-size: 1.6rem;
@@ -51,8 +76,8 @@ p, li, table {
 
 /* || header layout */
 
-div[class="nav"], article, footer, .secondary {
-  background-color: green;
+nav, article, footer, .secondary {
+  background-color: #FFF;
 }
 
 article, footer, .secondary {
@@ -63,7 +88,7 @@ article {
   margin-right: 10px;
 }
 
-div[class="nav"] {
+nav {
   height: 50px;
   background-color: ff80ff;
   display: flex;
@@ -71,20 +96,20 @@ div[class="nav"] {
   margin-bottom: 10px;
 }
 
-div[class="nav"] ul {
+nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-div[class="nav"] li {
+nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
 
-div[class="nav"] a {
+nav a {
   display: inline-block;
   font-size: 2rem;
   text-transform: uppercase;
@@ -92,7 +117,7 @@ div[class="nav"] a {
   color: black;
 }
 
-div[class="nav"] .search {
+nav .search {
   flex: 1;
   display: flex;
   align-items: center;
@@ -164,6 +189,7 @@ tbody tr:nth-child(odd) {
 img, audio {
   display: block;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 audio {
@@ -181,13 +207,21 @@ audio {
   cursor: pointer;
 }
 
-.comments font[size="6"] {
+.comments h2 {
+  font-size: 2rem;
+}
+
+.comments h2:nth-of-type(2) {
+  margin-bottom: 0;
+}
+
+/* .comments font[size="6"] {
   font-size: 2rem;
 }
 
 .comments font[size="6"]:nth-of-type(2) {
   margin-bottom: 0;
-}
+} */
 
 .comment-form {
   margin-bottom: 3rem;
